[gd_scene load_steps=5 format=3 uid="uid://cmw32yrc4gtg1"]

[ext_resource type="Script" path="res://scenes/levels/level_1.gd" id="1_476ud"]
[ext_resource type="Texture2D" uid="uid://bpkavuuabx8fl" path="res://assets/sprites/map/levels/nivel1.png" id="1_k2kn7"]

[sub_resource type="Curve2D" id="Curve2D_jok7v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 360, -18, 0, 0, 0, 0, 356, 157, 0, 0, 0, 0, 148, 155, 0, 0, 0, 0, 137, 408, 0, 0, 0, 0, 602, 429, 0, 0, 0, 0, 596, 697, 0, 0, 0, 0, 139, 685, 0, 0, 0, 0, 134, 977, 0, 0, 0, 0, 368, 990, 0, 0, 0, 0, 365, 1181)
}
point_count = 10

[sub_resource type="CircleShape2D" id="CircleShape2D_qu4uq"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_476ud")

[node name="Nivel1" type="Sprite2D" parent="."]
position = Vector2(360, 640)
texture = ExtResource("1_k2kn7")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_jok7v")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(360, -18)
rotation = 1.59365
rotates = false
loop = false

[node name="TowerSpots" type="Node2D" parent="."]

[node name="Spot1" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(275, 291)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[node name="Spot2" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(440, 294)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[node name="Spot3" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(605, 301)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[node name="Spot4" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(162, 545)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[node name="Spot5" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(317, 553)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[node name="Spot6" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(471, 556)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[node name="Spot7" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(295, 833)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[node name="Spot8" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(449, 838)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[node name="Spot9" type="TouchScreenButton" parent="TowerSpots"]
position = Vector2(601, 836)
scale = Vector2(6.8106, 6.6409)
shape = SubResource("CircleShape2D_qu4uq")

[connection signal="pressed" from="TowerSpots/Spot1" to="." method="_on_spot_1_pressed"]
